Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-31586

The test spider/bugfix.mdev_31463 has non-deterministic error codes

    XMLWordPrintable

Details

    Description

      The error code is non-deterministic, presumably due to some race
      condition from the SLEEP statement above. The correct error should
      be 12701 ER_SPIDER_REMOTE_SERVER_GONE_AWAY_NUM as it is the last
      failure. Nevertheless, this contrived test is needed to cover the
      error reporting when setting lock wait timeout, until we find a
      better test case and/or fixing the non-deterministic error reporting

      Attachments

        Issue Links

          Activity

            People

              ycp Yuchen Pei
              ycp Yuchen Pei
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: